--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "memoires"
 version = "0.1.0"
 edition = "2021"
+description = "Memoization for Rust"
+liscence = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
