--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "memoires"
 version = "0.1.0"
 edition = "2021"
 description = "Memoization for Rust"
-liscence = "MIT"
+licence = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
